--- a/src/index.css
+++ b/src/index.css
@@ -36,13 +36,14 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
+    margin: 0 0 0 0.2em;
+  border-radius: 4px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.1em 0.1em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: rgba(234, 198, 198, 0.53);
   cursor: pointer;
   transition: border-color 0.25s;
 }
