--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+/*button {
     margin: 0 0 0 0.2em;
   border-radius: 4px;
   border: 1px solid transparent;
@@ -46,14 +46,34 @@ button {
   background-color: rgba(234, 198, 198, 0.53);
   cursor: pointer;
   transition: border-color 0.25s;
+}*/
+
+button {
+    display: inline-block;
+    padding: 0.5em 0.5em;
+    margin: 0.2em 0.2em;
+    font-size: 0.8em;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    background-color: #3b3f3d;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 2px #999;
 }
-button:hover {
+
+/*button:hover {
   border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+}*/
+
+button:active {
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
 
 @media (prefers-color-scheme: light) {
   :root {
@@ -66,7 +86,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+}}
 
 input {
     font-size: 1.2em;
