--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  text-align: left;
 }
 
 h1 {
@@ -95,4 +96,9 @@ input {
     border: 2px solid #888;
     outline: none;
     transition: border-color 300ms, box-shadow 300ms;
+}
+
+h2 {
+    font-size: 1.5em;
+    margin-bottom: 0.2em;
 }
